Fix minor layout issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ blockquote {
 }
 
 .hero .content h1 {
-    font-size: 55px;
+    font-size: 45px;
 }
 
 .hero .content p {
@@ -272,13 +272,31 @@ blockquote {
 @media(max-width: 768px) {
     .navbar {
         flex-direction: column;
-        height: 120px;
+        justify-content: center;
+        align-items: center;
+        height: 140px;
         padding: 20px;
     }
 
     .navbar a {
         padding: 10px 10px;
         margin: 0 3px;
+    }
+
+    .navbar .logo img {
+        height: 40px;
+        width: 47px;
+        border-radius: 5px;
+    }
+
+    .navbar h1 {
+        font-weight: 300;
+        padding-left: 10px;
+        font-size: 24px;
+    }
+
+    .navbar ul {
+        margin-top: 20px;
     }
 
     .flex-items {
@@ -289,6 +307,12 @@ blockquote {
     .flex-grid .column {
         flex: 100%;
         max-width: 100%;
+    }
+}
+
+@media(max-width: 375px) {
+    .hero .content h1 {
+        margin-top: 100px;
     }
 }
 
